--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -7,7 +7,7 @@ html(lang='en')
         name='viewport',
         content='width=device-width, initial-scale=1, shrink-to-fit=no')
     title #{headline}
-    script(src="./app.js")
+    script(src="/app.js")
   body
     block header
         header
