--- a/templates/home.pug
+++ b/templates/home.pug
@@ -3,6 +3,6 @@ extends layout.pug
 block append main
   if tags.vessel
     ul(role=navigation)
-      each page in tags.vessel
+      each path in tags.vessel
         li
-          a(href=page.path)= page.mdMeta.headline
+          a(href=path)= pagesMap[path].mdMeta.headline
