--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -14,4 +14,5 @@ html(lang='en')
         header
     main(class="main")
       block main
+        h1= pagesMap[path].mdMeta.headline
         div(class="html") !{ mdHtml }
